# make_terrain

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md
assets/skybox/: top.tga
includes/: camera.h  common.h  context.h  fog.h  framebuffer.h  geometry_primitives.h  light.h  mesh.h  model.h  scene.h  shader.h  skybox.h  terrain.h  texture.h  utils.h  water.h
lib/: stb_image.cpp
scripts/: preprocess_terrain_assets.py  resize_image.py
shaders/: shader.vs  shader_fog.fs  shader_fxaa.fs  shader_water.fs  shader_water.vs
shaders/debug/: shader_depth_quad.fs  shader_terrain_normal.fs  shader_terrain_normal.gs
shaders/terrain/: shader_terrain.fs  shader_terrain.gs  shader_terrain.tesc  shader_terrain.tese  shader_terrain.vs
src/: camera.cpp  context.cpp  fog.cpp  framebuffer.cpp  light.cpp  main.cpp  shader.cpp  skybox.cpp  terrain.cpp  texture.cpp  utils.cpp  water.cpp
